themes/commons_origins/css/commons_origins-style.css
/* $Id: acquia_commons-style.css 8284 2010-12-30 18:50:11Z sheena $ */

/* Basic Typography & Colors-------------------------------------------------------------- */

/* Add general site styling here for typography and background */

body {
	color: #1f1f1f;
	font-family: "Helvetica Neue",Helvetica,Arial,Sans-serif;
	font-size: 75%;
	background: #ababab url(../images/body-bg.png) repeat-x 0 0;
	padding: 0;
	margin: 0;
}

body.cke_show_borders {
	background-color: #fff;
	background-image: none;
}

/* Default link styles - separate a:visited for a different visited link style */

a, 
a:link,
a:visited {
	color: #5588bb;
}

/* Hover/active link styles. Don't forget :focus for accessibility */

a:hover,
a:focus,
a:active {
	color: #333;
}

h1 {
  font-family: Georgia, times, serif;
	font-size: 3em;
	font-weight: normal;
	line-height: 1.1em;
	margin: .5em 0;
}

h2 {
  font-family: Georgia, times, serif;
	font-size: 1.6em;
	font-weight: normal;
	margin: 18px 0;
}

h3 {
  font-family: Georgia, Baskerville, times, serif;
	font-weight: bold;
	font-size: 1.2em;
	margin: 18px 0;
}

.date-heading h3 {
	border-bottom: none;
}

h4 {
	color: #619ed4;
}

blockquote p:first-child {
	margin-top: 0;
}

blockquote p:last-child {
	margin-bottom: 0px;
}

/* Specific Typography-------------------------------------------------------------- */

.footer-message {
	font-size: 90%;
}

/*content lists*/

ul.krumo-node ul{
	margin-left: 20px;
}

.item-list ul li,
.node .inner ul li,
.panel-pane .inner ul li,
.block .content ul li {
  background: transparent url(../images/gray-arrow-right.png) no-repeat 0 4px;
  list-style-image: none;
  list-style: none;
  margin-bottom: 8px;
  padding-left: 22px;
  text-indent: 0;
}

.node .inner .links li > a {
	color: #669acc;
}

.node .inner .links .comment_add {
	background-color: #669acc;
}

.node .inner .links .comment_add a{
	color: #fff;
}
/* HTML Elements-------------------------------------------------------------- */

body {
	
}

/*force the front page to be 960px wide*/
.front .grid16-16 {
	width: 960px;
	max-width: 960px;
	margin: 0 auto;
}


/* Link and hover styles for site name */

#site-name {
	font-size: 35px;
	line-height: 150%;
	margin-top: 20px;
  font-family: Georgia, times, serif;
}

#site-name-wrapper {
	float: left;
	vertical-align: middle;
	width: auto;
}

#site-name a:link,
#site-name a:visited,
#site-name a:hover,
#site-name a:active {
	margin: 0;
}

/* Typography for site slogan */

#slogan {
	
}

/* Regions  Classes (.region-name) should always be used instead of IDs (#region-name) so  that Skinr styles can override them with a class later-------------------------------------------------------------- */

/* All Regions-------------------------------------------------------------- */

.grid-type-960-fluid #left-background,
.grid-type-960-fluid #right-background {
	width: 339px;
	height: 100%;
	position: absolute;
	z-index: 1;
}

.grid-type-960-fluid #left-background {
	background: #cecece url(../images/background-left.png) no-repeat 0 0;
	left: 0;
}

.grid-type-960-fluid #right-background {
	background: transparent url(../images/background-right.png) no-repeat 0 0;
	right: 0;
}

.grid-type-960 .page {
	background: transparent url(../images/fixed-background.jpg) no-repeat center top;
}

.header-group,
.main,
.footer {
	background-color: #fff;
	position: relative;
	z-index: 2;
}

.header-group {
	position: relative;
	z-index: 10;
}

#logo {
  margin-top: 16px;
}

/* By default this wrapper is set to 100% width and centered -- override here to  narrow wrapper or align left or right */

.page {
	
}

/* The 0 values here remove padding and spacing at the bottom of the page.  Remove to add a gap at the very bottom of the page */

.page-inner {
	border: 0;
	margin-bottom: 0;
	padding: 0;
}

/* Header Regions-------------------------------------------------------------- */

/* Header Top region to the bottom of Header region */

/* For full-width header background, add background image/color here */

.header-group-wrapper {
	
}

.header-group {
	border-radius: 0 0 10px 10px;
	-webkit-border-radius: 0 0 10px 10px;
	-moz-border-radius: 0 0 10px 10px;
	overflow: hidden;
	margin-bottom: 10px;
	-webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, .3);
	box-shadow: 0px 2px 10px rgba(0, 0, 0, .3);
	-moz-box-shadow: 0px 2px 10px rgba(0, 0, 0, .3);
}

/* Header Top region which sits above the header */

/* Works well with inline login or inline menu block style */

.header-top-wrapper {
	
}

.header-top {
	
}


/*user login form if it is in the Header region */

.header-region-inner .block-user form,
.header-region-inner form#user-login-form {
	min-width: 420px;
}

.header-region-inner form#user-login-form,
.header-region-inner .block-user .inner {
	float: right;
}

.header-region-inner form#user-login-form .form-item,
.header-region-inner form#user-login-form input.form-submit,
.header-region-inner form#user-login-form div.item-list,
.header-region-inner .block-user .form-item,
.header-region-inner .block-user input.form-submit,
.header-region-inner .block-user #user-login-form div.item-list {
	float: left;
	margin: 0 4px 0 0;
	clear: none;
}

.header-region-inner .block-user #user-login-form div.item-list, 
.header-region-inner form#user-login-form div.item-list {
	width: auto;
	float: right;
	margin: 10px 0 0;
}

.header-region-inner form#user-login-form .form-item label,
.header-region-inner form#user-login-form .form-item input,
.header-region-inner form#user-login-form input.form-submit,
.header-region-inner .block-user .form-item label,
.header-region-inner .block-user .form-item input,
.header-region-inner .block-user input.form-submit {
	font-size: .95em;
	line-height: 1.1em;
	padding: .2em .4em;
	margin: 0 0.2em 0;
}

.header-region-inner form#user-login-form .form-item label,
.header-region-inner .block-user .form-item label {
	color: #666;
	margin: 0 0 .2em .4em;
	padding: 0;
	font-weight: normal;
}
/* ... */

